# reflex-admin

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rxconfig.py  t.py
.devcontainer/: devcontainer.json
.github/: codespell.yml
.github/workflows/: deploy.yml
assets/: custom-colors.css
reflex_admin/: reflex_admin.py
reflex_admin/components/: card.py  navbar.py  notification.py
reflex_admin/styles/: tailwind_config.py
