[tool.poetry]
name = "reflex-admin"
version = "0.0.1"
description = "Reflex-Admin is a high-performance, efficient and easily extensible admin framework. Inspired by django-admin, and has as many powerful functions as django-admin."
license = "Apache-2.0"
authors = [
    "MMM <mmm@mmm.mmm>",
]
readme = "README.md"
#homepage = "https://reflex.dev"
repository = "https://github.com/mmmcorpsvit/reflex-admin"
#documentation = "https://reflex.dev/docs/getting-started/introduction"
keywords = [
    "web",
    "framework",
    "admin"
]
classifiers = [
    "Development Status :: 4 - Beta",
]
#packages = [
#    {include = "reflex"}
#]

[tool.poetry.dependencies]
python = "^3.11"
reflex = "0.6.5"
gunicorn = ">=20.1.0,<24.0"
uvicorn = ">=0.20.0"
wheel = ">=0.42.0,<1.0"
build = ">=1.0.3,<2.0"
setuptools = ">=75.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2,<9.0"
pytest-mock = ">=3.10.0,<4.0"
pyright = ">=1.1.229,<1.1.335"
darglint = ">=1.8.1,<2.0"
dill = ">=0.3.8"
toml = ">=0.10.2,<1.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=4.0.0,<7.0"
ruff = "0.7.4"
pandas = ">=2.1.1,<3.0"
pillow = ">=10.0.0,<12.0"
plotly = ">=5.13.0,<6.0"
asynctest = ">=0.13.0,<1.0"
pre-commit = ">=3.2.1"
selenium = ">=4.11.0,<5.0"
pytest-benchmark = ">=4.0.0,<6.0"
playwright = ">=1.46.0"
pytest-playwright = ">=0.5.1"

#[tool.poetry.scripts]
#reflex = "reflex.reflex:cli"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]

[tool.ruff]
target-version = "py311"
lint.isort.split-on-trailing-comma = false
lint.select = ["B", "D", "E", "F", "I", "SIM", "W"]
lint.ignore = ["B008", "D205", "E501", "F403", "SIM115"]
lint.pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["D100", "D103", "D104", "B018"]
"reflex/.templates/*.py" = ["D100", "D103", "D104"]
"*.pyi" = ["D301", "D415", "D417", "D418", "E742"]
"*/blank.py" = ["I001"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
